<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.myapplication.ui.movie.MovieFragment"
        android:label="@string/tab_title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv_series"
        android:name="com.example.myapplication.ui.series.SeriesFragment"
        android:label="@string/tab_title_tvshow"
        tools:layout="@layout/fragment_series" />



    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.myapplication.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />


</navigation>